syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mh.flux.api.request";
option java_outer_classname = "FluxAPIProto";
option objc_class_prefix = "FLUX";

enum messageType {
  JSON = 0;
  XML = 1;
  PROTO = 2;
}
message reqHeader {
  string timestamp = 1;
  string identity = 2;
  messageType type = 3;
  string sign = 4;
}